src/components/Modal/Product/styles.scss
@import "../../../styles/theme";

.modal-product {
  width: 721px;
  max-height: 820px;
  height: 100%;
  background-color: white;
  border-right: 1px solid rgba(51, 51, 51, 0.3);
  padding: 20px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  .-pictures {
    height: 70%;
    width: 100%;
    display: flex;
    flex: 1;
    .-picture {
      width: 577px;
      height: 100%;
      display: flex;
      justify-content: center;
      //flex: 1;
      .-big-picture {
        width: auto;
        height: 100%;
        max-height: 591px;
      }
      .-description-section {
        width: 100%;
        height: 100%;
        display: flex;
        justify-content: flex-start;
        align-content: flex-start;
        padding-left: 103px - 20px;
        flex-direction: column;
        box-sizing: border-box;
        overflow: hidden;
        .-big-picture {
          width: 289px;
          height: 289px;
        }
        .-title {
          font-size: 30px;
          line-height: 41px;
          font-family: $font-Nunito-ExtraBold;
          text-align: left;
          margin-bottom: 10px;
          &.-facilities {
            color: #FF7A00;
          }
          &.-included {
            color: #921FED
          }
        }
        .-fasc {
          text-align: left;
          font-size: 18px;
          line-height: 130%;
          font-family: $font-Nunito-SemiBold;
        }
      }
    }
    .pictures-list {
      height: 100%;
      flex: 1 1;
      flex-direction: column;
      display: flex;
      align-items: flex-end;
      .--picture-option {
        width: 83px;
        height: 83px;
        cursor: pointer;
        opacity: 0.3;
        margin-bottom: 20px;
        &.-selected {
          opacity: 1;
        }
      }
    }
  }
  .bottom-section {
    width: 100%;
    padding-left: 103px - 20px;
    box-sizing: border-box;
    margin-top: 10px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    margin-bottom: 10px;
    .-header {
      display: inline-flex;
      justify-content: flex-start;
      align-items: flex-start;
      align-content: flex-start;
      width: 100%;
      .-name {
        font-family: $font-Nunito-ExtraBold;
        font-size: 30px;
        line-height: 41px;
        margin-right: 16px;
      }
      .char-cont {
        display: flex;
        .-modules {
          font-family: $font-Nunito-SemiBold;
          font-size: 18px;
          line-height: 100%;
          color: #000000;
          height: 41px;
          background: #C9F6DC;
          border-radius: 5px;
          padding: 12px 12px 11px;
          box-sizing: border-box;
          margin-right: 16px;
        }

        .-price {
          font-family: $font-Nunito-Bold;
          height: 41px;
          font-size: 21px;
          line-height: 29px;
          color: #FFFFFF;
          background: #FF7A00;
          padding: 6px 12px;
          border-radius: 5px;
          box-sizing: border-box;
        }
      }
    }
    .-features {
      margin-top: 10px;
      text-align: left;
      font-family: $font-Nunito-SemiBold;
      box-sizing: border-box;
      white-space: pre-wrap;
      padding-right: 80px;
      i {
        margin-right: 14px;
      }
      .-feature {
        font-size: 18px;
        line-height: 26px;
      }
    }
    .byn-bank-course {
      white-space: pre;
      font-family: $font-Nunito-Regular;
      font-size: 14px;
      line-height: 130%;
      text-align: left;
      margin-top: 20px;
    }
  }
}


@media only screen and (max-width: 960px) {

  .modal-product {
    width: 100%;
    height: auto;
    border-right: none;
    .-pictures {
      flex-direction: column;
      height: auto;
      .-picture {
        width: 280px;
        height: 280px;
        .-big-picture {
          width: 280px;
          height: auto;
        }
        .-description-section {
          padding-left: 0;
          .-big-picture {
            display: none;
          }
          .-title {
            font-size: 24px;
            line-height: 33px;
          }
          .-fasc {
            font-size: 16px;
            line-height: 130%;
          }
        }
      }
      .pictures-list {
        height: 48px;
        width: 100%;
        display: inline-flex;
        flex-direction: row;
        .--picture-option {
          width: 48px;
          height: 48px;
          margin-bottom: 0;
          margin-right: 10px;
          &.-selected {

          }
        }
      }
    }
    .bottom-section {
      padding-left: 0;
      .-header {
        flex-direction: column;
        .-name {
          font-size: 24px;
          line-height: 33px;
          margin-bottom: 4px;
        }
        .char-cont {
          .-modules {
            height: 38px;
            padding: 12px;
            font-size: 14px;
            line-height: 100%;
            margin-right: 12px;
          }

          .-price {
            height: 38px;
            padding: 7px 12px;
            font-size: 18px;
            line-height: 25px;
          }
        }
      }
      .-features {
        padding-right: 0;
        i {
          margin-right: 8px;
        }
        .-feature {
          font-size: 14px;
          line-height: 100%;
        }
      }
      .byn-bank-course {
        white-space: unset;
      }
    }
  }

}

